manifests/userservicemanifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
spec:
  selector:
    matchLabels:
      app: userservice
  replicas: 3
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name:  userservice
          image: epamantontsyrkunou/userservice-1.0.0
          ports:
            - containerPort: 7777
          env:   # Setting Enviornmental Variables
            - name: PASSWORD   # Setting Database host address from configMap
              value: postgres
#               valueFrom :
#                 configMapKeyRef :
#                   name : db-config
#                   key :  POSTGRES_HOST

            - name: USERNAME  # Setting Database name from configMap
              value: postgres
#               valueFrom :
#                 configMapKeyRef :
#                   name : db-config
#                   key : POSTGRES_DB

            - name: URL  # Setting Database username from Secret
              value: jdbc:postgresql://host.docker.internal:5432/userdb
#               valueFrom :
#                 secretKeyRef :
#                   name : psql-secrets
#                   key : POSTGRES_USER
#
#             - name: DB_PASSWORD # Setting Database password from Secret
#               valueFrom :
#                 secretKeyRef :
#                   name : psql-secrets
#                   key : POSTGRES_PASSWORD
