manifests/userdbmanifest.yaml

# Configure 'Deployment' of  server
apiVersion: apps/v1
kind: Deployment
metadata:
    name: userdb
    labels:
       app: userdb
       tier: database
spec:
  selector: # psql Pod Should contain same labels
    matchLabels:
      app: userdb
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: userdb
        tier: database
    spec:
      containers:
        - image: epamantontsyrkunou/userdb # image from docker
          name: userdb
#           args:
#             - "--ignore-db-dir=lost+found"
#           name: userdb
          ports:
            - containerPort: 5437
              name: userdb
          volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
            - name: userdb-pv-claim
              mountPath: /var/lib/psql #This is the path in the container on which the mounting will take place.
      volumes:
        - name: userdb-pv-claim # Obtaining 'vloume' from PVC
          persistentVolumeClaim:
            claimName: userdb-pv-claim
---

# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: userdb  # DNS name
  labels:
    app: userdb
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:       # mysql Pod Should contain same labels
    app: userdb
    tier: database
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
---
