manifests/mm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: epam-mentoring-kuber-namespace
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdb
  namespace: epam-mentoring-kuber-namespace
  labels:
    app: userdb
    tier: database
spec:
  selector:
    matchLabels:
      app: userdb
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userdb
        tier: database
    spec:
      containers:
        - image: epamantontsyrkunou/userdb # image from docker
          name: userdb
          ports:
            - containerPort: 5437
              name: userdb
          volumeMounts: # Mounting voulume obtained from Persistent Volume Claim
            - name: userdb-pv-claim
              mountPath: /var/lib/psql #This is the path in the container on which the mounting will take place.
      volumes:
        - name: userdb-pv-claim # Obtaining 'volume' from PVC
          persistentVolumeClaim:
            claimName: userdb-pv-claim
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postdb
  namespace: epam-mentoring-kuber-namespace
  labels:
    app: postdb
    tier: database
spec:
  selector:
    matchLabels:
      app: postdb
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postdb
        tier: database
    spec:
      containers:
        - image: epamantontsyrkunou/postdb # image from docker
          name: postdb
          ports:
            - containerPort: 5437
              name: postdb
          volumeMounts: # Mounting voulume obtained from Persistent Volume Claim
            - name: postdb-pv-claim
              mountPath: /var/lib/psql #This is the path in the container on which the mounting will take place.
      volumes:
        - name: postdb-pv-claim # Obtaining 'vloume' from PVC
          persistentVolumeClaim:
            claimName: postdb-pv-claim
---

apiVersion: v1
kind: Service
metadata:
  name: userdb
  namespace: epam-mentoring-kuber-namespace
  labels:
    app: userdb
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: userdb
    tier: database
  clusterIP: None
---

apiVersion: v1
kind: Service
metadata:
  name: postdb
  namespace: epam-mentoring-kuber-namespace
  labels:
    app: postdb
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postdb
    tier: database
  clusterIP: None
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  namespace: epam-mentoring-kuber-namespace
spec:
  selector:
    matchLabels:
      app: userservice
  replicas: 2
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: epamantontsyrkunou/userservice-1.0.0
          ports:
            - containerPort: 7777
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 7777
            initialDelaySeconds: 50
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 7777
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postservice-deployment
  namespace: epam-mentoring-kuber-namespace
spec:
  selector:
    matchLabels:
      app: postservice
  replicas: 2
  template:
    metadata:
      labels:
        app: postservice
    spec:
      containers:
        - name: postservice
          image: epamantontsyrkunou/postservice-1.0.2
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 50
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
---

apiVersion: v1
kind: Service
metadata:
  name: userservice-svc
  namespace: epam-mentoring-kuber-namespace
spec:
  selector:
    app: userservice
  ports:
    - port: 8181 # The port that the service is running on in the cluster
      targetPort: 7777 # The port exposed by the service
      nodePort: 31515
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: postservice-svc
  namespace: epam-mentoring-kuber-namespace
spec:
  selector:
    app: postservice
  ports:
    - port: 8181 # The port that the service is running on in the cluster
      targetPort: 8888 # The port exposed by the service
      nodePort: 31516 # The TCP port in cluster
  type: NodePort # type of the service.
---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx-example
  namespace: epam-mentoring-kuber-namespace
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: epam-mentoring-kuber-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /us/?(.*)
            pathType: Prefix
            backend:
              service:
                name: userservice-svc
                port:
                  number: 8181
          - path: /ps/?(.*)
            pathType: Prefix
            backend:
              service:
                name: postservice-svc
                port:
                  number: 8181

---
